Updated project documentation to fit standards

--- a/titanic_survival_classifier.ipynb
+++ b/titanic_survival_classifier.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "# Titanic Survival Classifier\n",
     "\n",
-    "This notebook uses a Decision Tree Classifier to predict the survival of passengers on the Titanic. The dataset is from Kaggle and can be found [here](https://www.kaggle.com/datasets/yasserh/titanic-dataset)."
+    "The RMS Titanic was a British passenger liner that sank in the North Atlantic Ocean on the night of April 14-15, 1912, after striking an iceberg during her maiden voyage from Southampton to New York City. At the time of her construction, she was the largest ship afloat and was considered the most luxurious passenger ship ever built.\n",
+    "\n",
+    "The disaster was caused by a combination of factors, including the ship's speed, the lack of lifeboats, and the failure of the crew to properly manage the evacuation. The sinking of the Titanic was one of the deadliest commercial peacetime maritime disasters in modern history. It led to major changes in maritime safety regulations, including the requirement for ships to carry enough lifeboats for all passengers and crew.\n",
+    "\n",
+    "In this notebook we will analyze a dataset containing information about the passengers aboard the Titanic and predict whether a passenger survived or not based on the available features.\n",
+    "\n",
+    "The dataset used is from Kaggle and can be found [here](https://www.kaggle.com/datasets/yasserh/titanic-dataset)."
    ]
   },
   {
@@ -372,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing"
+    "## Data Preprocessing"
    ]
   },
   {
@@ -492,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Building"
+    "## Model Building and Testing"
    ]
   },
   {
